[package]
name = "starling-webhooks"
version = "0.1.1-alpha.0"
edition = "2018"
description = "Starling webhook type definitions"
readme = "README.md"
repository = "https://github.com/alexander-jackson/starling-webhooks"
license = "MIT OR Apache-2.0"
keywords = ["starling", "webhooks"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.127", features = ["derive"] }
uuid = { version = "0.8.2", features = ["serde"] }
